fix(deployer): Xlint residual — leaf/job/helper surfaces (#2915)
Clear remaining perc-deployer Xlint diagnostics on leaf/job/helper surfaces
after #2894 / PR #2914 and #2861 / PR #2893 without reworking those handlers.

- PSDeployJob: typed initDepCount(Iterator<? extends PSDependency>)
- PSItemData / PSContentEditorObjectDependencyHandler: Iterator<?> loops
- PSAssemblyServiceHelper: drop redundant cast; remove dead SlotsComparer
- PSDependencyFile static qualify; PSPkgElement serialVersionUID
- PSUpgradePluginRelationshipVersions: no unchecked stream cast
- PSImportJob: Long.valueOf instead of deprecated new Long
- PSDeployJobLeafTypedTest signature smokes

Refs #2028 #2200 #2894
Fixes #2915

> Co-Authored by Grok Build using grok-4.5 with agent main.